Fixed alignment based on Peter's feedback.

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -712,7 +712,7 @@ a, img {
                 .bracket-sprite;
                 display: inline-block;
                 background-position: -32px 2px;
-                padding-top: 3px;
+                padding-top: 5px;
             }
 
             .line-number {
